force-app/main/default/objects/Retail_Lead__c/Retail_Lead__c.object-meta.xml
<CustomObject>
    <label>Retail Lead</label>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Lead Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>