force-app/main/default/objects/Retail_Lead__c/fields/InterestedProducts__c.field-meta.xml
<CustomField>
    <fullName>InterestedProducts__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Interested Products</label>
    <referenceTo>Retail_Product_Group__c</referenceTo>
    <relationshipLabel>Retail Leads</relationshipLabel>
    <relationshipName>Retail_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>