force-app/main/default/objects/Retail_Lead__c/fields/Is_Converted__c.field-meta.xml
<CustomField>
    <fullName>Is_Converted__c</fullName>
    <label>Is Converted?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>