force-app/main/default/objects/Retail_Lead__c/fields/Last_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Order_Date__c</fullName>
    <description>If the Customer Id field in Lead is not null then the Last order date will be the customer last order date</description>
    <formula>IF(NOT(ISBLANK(Link_Customer_Id__c)),Link_Customer_Id__r.Last_Order_Date__c , NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Order Date</label>
    <type>Date</type>
</CustomField>