force-app/main/default/objects/Retail_Lead__c/fields/Lead_Visit__c.field-meta.xml
<CustomField>
    <fullName>Lead_Visit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Visit</label>
    <referenceTo>Retail_Lead_Visit__c</referenceTo>
    <relationshipLabel>Retail Leads</relationshipLabel>
    <relationshipName>Retail_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>