force-app/main/default/objects/Retail_Lead__c/fields/Link_Customer_Id__c.field-meta.xml
<CustomField>
    <fullName>Link_Customer_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Connect the customer and lead data for this client</inlineHelpText>
    <label>Link Customer Id</label>
    <referenceTo>Retail_Customer__c</referenceTo>
    <relationshipLabel>Retail Leads (Link Customer Id)</relationshipLabel>
    <relationshipName>Retail_Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>