force-app/main/default/objects/Retail_Lead__c/fields/Pending_Data__c.field-meta.xml
<CustomField>
    <fullName>Pending_Data__c</fullName>
    <label>Pending Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller Id</fullName>
            </value>
            <value>
                <fullName>Customer Id</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>