force-app/main/default/objects/Retail_Lead__c/fields/Retail_Lead_District__c.field-meta.xml
<CustomField>
    <fullName>Retail_Lead_District__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>District</label>
    <referenceTo>Retail_District__c</referenceTo>
    <relationshipLabel>Retail Leads</relationshipLabel>
    <relationshipName>Retail_Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>