force-app/main/default/objects/Retail_Lead__c/fields/Retail_Lead_Taluka__c.field-meta.xml
<CustomField>
    <fullName>Retail_Lead_Taluka__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Taluka</label>
    <referenceTo>Retail_Taluka__c</referenceTo>
    <relationshipLabel>Retail Leads</relationshipLabel>
    <relationshipName>Retail_Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>