force-app/main/default/objects/Retail_Lead__c/fields/RetailLeadState__c.field-meta.xml
<CustomField>
    <fullName>RetailLeadState__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>State</label>
    <referenceTo>Retail_State__c</referenceTo>
    <relationshipLabel>Retail Leads</relationshipLabel>
    <relationshipName>Retail_Leads</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>