force-app/main/default/objects/Retail_Lead__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Avana Retail customer/customers from which this lead is purchasing Avana Retail  products</inlineHelpText>
    <label>Seller Name</label>
    <referenceTo>Retail_Customer__c</referenceTo>
    <relationshipLabel>Retail Leads</relationshipLabel>
    <relationshipName>Retail_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>