force-app/main/default/objects/Retail_Lead__c/fields/Village__c.field-meta.xml
<CustomField>
    <fullName>Village__c</fullName>
    <label>Village</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>