force-app/main/default/objects/Retail_Lead__c/fields/Zoho_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>Zoho_Lead_Id__c</fullName>
    <label>Zoho Lead Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>