force-app/main/default/objects/Retail_Lead__c/validationRules/Checking_Leadtype.validationRule-meta.xml
<ValidationRule>
    <fullName>Checking_Leadtype</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Lead_Type__c , &quot;Farmer&quot;) , 
      ISBLANK(  Seller_Name__r.Name__c ) 

)</errorConditionFormula>
    <errorDisplayField>Seller_Name__c</errorDisplayField>
    <errorMessage>Enter Seller Name</errorMessage>
</ValidationRule>