force-app/main/default/objects/Retail_Lead__c/validationRules/If_Leadtype_Is_Farmer.validationRule-meta.xml
<ValidationRule>
    <fullName>If_Leadtype_Is_Farmer</fullName>
    <active>false</active>
    <description>If LeadType is Farmer then SellerName shouldn&apos;t be empty</description>
    <errorConditionFormula>AND( ISPICKVAL( Lead_Type__c , &quot;Farmer&quot;) , 
      ISBLANK( Seller_Name__c ) 

)</errorConditionFormula>
    <errorMessage>Please provide a seller name for lead type Farmer</errorMessage>
</ValidationRule>