force-app/main/default/objects/Retail_Lead__c/validationRules/phonenumbervalidationrule.validationRule-meta.xml
<ValidationRule>
    <fullName>phonenumbervalidationrule</fullName>
    <active>false</active>
    <errorConditionFormula>NOT(REGEX(Phone__c, &quot;\\D*?(\\d\\D*?){10}&quot;))</errorConditionFormula>
    <errorDisplayField>Phone__c</errorDisplayField>
    <errorMessage>Please enter a valid phone number</errorMessage>
</ValidationRule>