force-app/main/default/objects/Retail_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Is_Converted__c</columns>
    <columns>Lead_Name__c</columns>
    <columns>Lead_Type__c</columns>
    <columns>Link_Customer_Id__c</columns>
    <columns>Lead_Source__c</columns>
    <columns>Lead_Owner__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>